[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/ProcessCircle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/draganddrop.gd" type="Script" id=2]
[ext_resource path="res://Sprites/ResourceCircle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 34.0

[node name="GraphNode" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ProcessIcon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ResourceIcon" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
